fix alignment

--- a/packages/devextreme/scss/widgets/fluent/pivotGrid/_index.scss
+++ b/packages/devextreme/scss/widgets/fluent/pivotGrid/_index.scss
@@ -42,7 +42,7 @@
 // adduse
 
 
-$fluent-pivotgrid-headers-font-size: 12px;
+$fluent-pivotgrid-headers-font-size: 14px;
 $fluent-pivotgrid-area-font-size: 13px;
 $fluent-pivotgrid-chevron-icon-size: 20px;
 
@@ -65,6 +65,7 @@ $fluent-pivotgridfieldchooser-field-min-height: 36px;
     border: 1px solid $base-border-color-disabled;
     font-size: $fluent-pivotgrid-headers-font-size;
     font-weight: $pivotgrid-field-area-box-font-weight;
+    line-height: 20px;;
 
     .dx-header-filter {
       color: $base-accent;
